View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027505 | Open CASCADE | OCCT:Visualization | public | 2016-05-16 07:31 | 2019-02-21 09:44 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Mac | OS | OS | ||
Product Version | 6.6.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027505: Visualization, Font_FontMgr - do not look for fonts.dir on OS X | ||||
Description | Current implementation of Font_FontMgr appends correct standard folder on OS X, however the actual search procedure is looking for fonts.dir file in folder, which is missing (X11-specific). The code should be updated to take register all font files from standard folders, as is done on Android. | ||||
Steps To Reproduce | test case 3rdparty/fonts/A8 | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR27505 has been created by kgv. SHA-1: b9efaf4acd99e1b1d512d20f11ed5e5d7520cfae Detailed log of new commits: Author: kgv Date: Mon May 16 07:39:14 2016 +0300 0027505: Visualization, Font_FontMgr - do not look for fonts.dir on OS X Font_FontMgr::InitFontDataBase() now uses the same approach on OS X as on Android ignoring fonts.dir files which are non used on these systems. |
|
Please check compilation (regression testing makes sense only on Android and OS X platforms). |
|
check compilation : there are no new warnings on all platforms Tested on MacOS. Fonts are found by testing cases. http://occt-tests/CR27505_master-OCCT/MacOS/3rdparty/fonts/A2.html |
|
Branch CR27505 has been deleted by inv. SHA-1: b9efaf4acd99e1b1d512d20f11ed5e5d7520cfae |
occt: master 264abd72 2016-05-16 04:39:14 Committer: bugmaster Details Diff |
0027505: Visualization, Font_FontMgr - do not look for fonts.dir on OS X Font_FontMgr::InitFontDataBase() now uses the same approach on OS X as on Android ignoring fonts.dir files which are non used on these systems. |
Affected Issues 0027505 |
|
mod - src/Font/Font_FontMgr.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-05-16 07:31 | kgv | New Issue | |
2016-05-16 07:31 | kgv | Assigned To | => kgv |
2016-05-16 07:39 | git | Note Added: 0054043 | |
2016-05-16 07:39 | kgv | Status | new => resolved |
2016-05-16 09:18 | kgv | Note Added: 0054044 | |
2016-05-16 09:18 | kgv | Assigned To | kgv => bugmaster |
2016-05-16 09:18 | kgv | Status | resolved => reviewed |
2016-05-16 09:18 | kgv | Steps to Reproduce Updated | |
2016-05-16 09:19 | kgv | Relationship added | related to 0025978 |
2016-05-16 09:21 | kgv | Product Version | 7.0.0 => 6.6.0 |
2016-05-17 13:43 | bugmaster | Note Added: 0054089 | |
2016-05-17 13:43 | bugmaster | Status | reviewed => tested |
2016-05-20 11:18 | bugmaster | Changeset attached | => occt master 264abd72 |
2016-05-20 11:18 | bugmaster | Status | tested => verified |
2016-05-20 11:18 | bugmaster | Resolution | open => fixed |
2016-05-20 12:20 | git | Note Added: 0054172 | |
2016-12-09 16:33 |
|
Status | verified => closed |
2016-12-09 16:37 |
|
Fixed in Version | => 7.1.0 |
2019-02-21 09:44 | kgv | Relationship added | related to 0030439 |