0027505: Visualization, Font_FontMgr - do not look for fonts.dir on OS X

Font_FontMgr::InitFontDataBase() now uses the same approach on OS X as on Android
ignoring fonts.dir files which are non used on these systems.